<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/excluded_notice"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/excluded_words"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight=".5"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textCapWords|textAutoComplete|textMultiLine"
        android:lines="5" />

        <LinearLayout
            android:id="@+id/background_color_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray" >
        <Button
            android:id="@+id/excluded_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel" />

        <View
            android:id="@+id/vert_rule5"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/excluded_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/OK" />

    </LinearLayout>
</LinearLayout>
